--- a/RC_Dashboard/templates/index.html
+++ b/RC_Dashboard/templates/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-
-<meta http-equiv="refresh" content="15" />
+<meta http-equiv="refresh" content="3" />
 <html lang="en">
+
 <head>
-  <title>Example</title>
+  <title>Flag in Space</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 </head>
 
