--- a/RC_Dashboard/templates/index.html
+++ b/RC_Dashboard/templates/index.html
@@ -27,7 +27,7 @@
 <div id="grid">
 
 <div>
-  <pre style="color:#ADD8E6;"> ------------------  Car 1 ------------------</pre>
+  <pre style="color:#ADD8E6;"> ------------------  Forensics ------------------</pre>
   {% for row in rows1 %}
     {% if row.split(',')[0] == 'white' %}
     <pre>{{row.split(',')[1]}}</pre>
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <pre style="color:#ADD8E6;">------------------  Car 2 ------------------</pre>
+    <pre style="color:#ADD8E6;">------------------  Web ------------------</pre>
   {% for row in rows2 %}
     {% if row.split(',')[0] == 'white' %}
     <pre>{{row.split(',')[1]}}</pre>
@@ -58,7 +58,7 @@
 
 
 <div>
-    <pre style="color:#ADD8E6;">------------------  Car 3 ------------------</pre>
+    <pre style="color:#ADD8E6;">------------------  Crypto ------------------</pre>
   {% for row in rows3 %}
     {% if row.split(',')[0] == 'white' %}
     <pre>{{row.split(',')[1]}}</pre>
@@ -73,7 +73,7 @@
 </div>
 
 <div>
-    <pre style="color:#ADD8E6;">------------------  Car 4 ------------------</pre>
+    <pre style="color:#ADD8E6;">------------------  Reverse ------------------</pre>
   {% for row in rows4 %}
     {% if row.split(',')[0] == 'white' %}
     <pre>{{row.split(',')[1]}}</pre>
@@ -88,7 +88,7 @@
 </div>
 
 <div>
-    <pre style="color:#ADD8E6;">------------------  Car 5 ------------------</pre>
+    <pre style="color:#ADD8E6;">------------------  Pwn ------------------</pre>
   {% for row in rows5 %}
     {% if row.split(',')[0] == 'white' %}
     <pre>{{row.split(',')[1]}}</pre>
