--- a/CarPlatform/web/src/templates/index.html
+++ b/CarPlatform/web/src/templates/index.html
@@ -1,90 +1,79 @@
-<head>
-    <title>Move the car...</title>
-</head>
+<html>
+    <head>
+        <title>RCCTF Web</title>
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
+    </head>
 
-<style>
-#button-home{background-color: transparent; border: transparent; position: fixed; bottom: 20px; left: 20px}
-#button-next-task{background-color: black; border: transparent; position: fixed; bottom: 20px; right: 20px; height: 80px; width: 160px;}
-
-#button-forward{background-color: transparent; border: transparent}
-#button-left{background-color: transparent; margin-right:70px; border: transparent}
-#button-right{background-color: transparent; margin-left:70px; border: transparent}
-#button-backward{background-color: transparent; border: transparent}
-
-</style>
-    
-<body style="background-image: url({{ url_for('static', filename='icons/racing_background.jpeg') }}); background-size: cover; height:600px; padding-top:80px; text-align: center;">
-        <script type="text/javascript">
-            // STORE TOKEN INTO LOCALSTORAGE
-            localStorage.setItem("authorized_to_drive", "False");
-        </script>
-        <center>
-            <button id="button-forward" onmousedown="move('forward')" onmouseup="move('stop')">
-                <img src="{{ url_for('static', filename='icons/fancy_right.png') }}" height="100" width="100" style="transform:rotate(-90deg);"/>
-            </button>
-            
-            <br /><br />
-            
-            <button id="button-left" onmousedown="move('left')" onmouseup="move('stop')">
-                <img src="{{ url_for('static', filename='icons/fancy_right.png') }}" height="100" width="100" style="transform:rotate(180deg);"/>
-            </button>
-            
-            <img src="{{ url_for('static', filename='icons/hot_wheels.png') }}" height="100" width="100" style="transform:rotate(0deg);"/>
-            
-            <button id="button-right" onmousedown="move('right')" onmouseup="move('stop')">
-                <img src="{{ url_for('static', filename='icons/fancy_right.png') }}" height="100" width="100" style="transform:rotate(0deg);"/>
-            </button>
-            
-            <br /><br />
-            
-            <button id="button-backward" onmousedown="move('backward')" onmouseup="move('stop')">
-                <img src="{{ url_for('static', filename='icons/fancy_right.png') }}" height="100" width="100" style="transform:rotate(90deg);"/>
-            </button>
-            
-            <br /><p id="reaction" />
-            
-        </center>
-</body>
-
-<script>
-    function move(param) {
-        auth_token = localStorage.getItem("authorized_to_drive");
-        if (auth_token.localeCompare('True') == 0) {
-            var data;
-            if (param.localeCompare('forward') == 0) {
-                data = {zoom: "forward"};
-                document.getElementById("reaction").innerHTML = "I'm moving forward!";
-
-            } else if (param.localeCompare('left') == 0) {
-                data = {zoom: "left"};
-                document.getElementById("reaction").innerHTML = "I'm moving left!";
-            
-            } else if (param.localeCompare('right') == 0) {
-                data = {zoom: "right"};
-                document.getElementById("reaction").innerHTML = "I'm moving right!";
-            
-            } else if (param.localeCompare('backward') == 0) {
-                data = {zoom: "backward"};
-                document.getElementById("reaction").innerHTML = "I'm moving backward!";
+    <body>
+        <nav>
+            <a href="/"><img src="{{url_for('static', filename='icons/home.png')}}" width="20px" height="20px"></a>
+            <a href="/login">Admin Dashboard</a>
+            <a href="/flag-generator">Flag Generator</a>
+            <a href="/calculator">Calculcator</a>
+            <button type="button" class="collapsible"><img src="{{url_for('static', filename='icons/help.png')}}" height="26px" width="26px"></button>
+        </nav>
+        <div id="help-dialog">
+            <p>
+                <h2>Welcome to RCCTF</h2><br><br>
+                There are four flags hidden on this site.  Each flag will enable one direction of movement on the car.  All of the flags follow this format: flag{some_random_text}<br><br>
                 
-            } else if (param.localeCompare('stop') == 0) {
-                data = {zoom: "stop"};
-                document.getElementById("reaction").innerHTML = "I'm no longer moving!";
-            
-            } else {
-                data = {zoom: "never gets here"};
-            }
-            
-            fetch("/movement/", {
-            method: "POST",
-            headers: {'Content-Type': 'application/json'}, 
-            body: JSON.stringify(data)
-            }).then(res => {
-                console.log("Request complete! response:", res);
-            });
-        } else {
-            document.getElementById("reaction").innerHTML = "You're not authorized to drive this vehicle...";
-        }
+                These challenges unlock these directions:<br><br>
+                    hidden flag ...... forward movement<br>
+                    Admin Dashboard .. leftward movement<br>
+                    Flag Generator ... rightward movement<br>
+                    Calculator ....... backward movement<br><br><br>
+                
+                Use what you've learned to gain full control of the car!
+            </p>
+        </div>
         
-    }
-</script>
+        <div id="control-panel-container">
+            <div id="extra-buttons-container">
+                <button onmousedown="move('lights')">
+                    <img src="{{url_for('static', filename='icons/lights.png')}}">
+                </button>
+                <button onmousedown="move('spin')">
+                    <img src="{{url_for('static', filename='icons/spinning-arrows.png')}}">
+                </button>
+            </div>
+            <img src="{{url_for('static', filename='icons/hot_wheels.png')}}" id="checkered-flag">
+            <img src="{{url_for('static', filename='icons/car.png')}}" id="car">
+            <div id="arrow-panel">
+                <button id="button-forward" onmousedown="move('forward')" onmouseup="move('stop')">
+                    <img src="{{url_for('static', filename='icons/fancy_right.png')}}">
+                </button>
+                <button id="button-left" onmousedown="move('left')" onmouseup="move('stop')">
+                    <img src="{{url_for('static', filename='icons/fancy_right.png')}}">
+                </button>
+                <button id="button-right" onmousedown="move('right')" onmouseup="move('stop')">
+                    <img src="{{url_for('static', filename='icons/fancy_right.png')}}">
+                </button>
+                <button id="button-backward" onmousedown="move('backward')" onmouseup="move('stop')">
+                    <img src="{{url_for('static', filename='icons/fancy_right.png')}}">
+                </button>
+            </div>
+            <div class="flag-input" id="forward-movement">
+                <p>Forward movement: DISABLED</p>
+                <button class="flag-input-button right-justified" type="button">➤</button>
+                <input class="flag-input-text left-justified" type="text">
+            </div>
+            <div class="flag-input" id="left-movement">
+                <p>Left movement: DISABLED</p>
+                <button class="flag-input-button right-justified" type="button">➤</button>
+                <input class="flag-input-text left-justified" type="text">
+            </div>
+            <div class="flag-input" id="right-movement">
+                <p>Right movement: DISABLED</p>
+                <button class="flag-input-button right-justified" type="button">➤</button>
+                <input class="flag-input-text left-justified" type="text">
+            </div>
+            <div class="flag-input" id="backward-movement">
+                <p>Backward movement: DISABLED</p>
+                <button class="flag-input-button right-justified" type="button">➤</button>
+                <input class="flag-input-text left-justified" type="text">
+            </div>
+            <div id="event-log-pane"><p>Welcome to RCCTF<p></div>
+        </div>
+        <script src="{{url_for('static', filename='js/app.js')}}"></script>
+    </body>
+</html>
